proxy/src/snapshots/chronicle_proxy__testing__fixture_response@groq_tool_calls_streaming.snap
---
source: proxy/src/testing.rs
expression: response
---
{
  "request_info": {
    "id": "00000000-0000-0000-0000-000000000000",
    "provider": "groq",
    "model": "me/a-test-model",
    "num_retries": 0,
    "was_rate_limited": false
  },
  "response_info": {
    "meta": null,
    "model": "llama3-8b-8192"
  },
  "was_streaming": true,
  "num_chunks": 3,
  "response": {
    "created": 0,
    "model": "llama3-8b-8192",
    "system_fingerprint": "fp_179b0f92c9",
    "choices": [
      {
        "index": 0,
        "message": {
          "role": "assistant",
          "content": "",
          "tool_calls": [
            {
              "index": 0,
              "id": "call_w5s5",
              "type": "function",
              "function": {
                "name": "get_characteristics",
                "arguments": "{\"hair_color\":\"brown\",\"name\":\"Daniel\"}"
              }
            }
          ]
        },
        "finish_reason": "tool_calls"
      }
    ],
    "usage": {
      "prompt_tokens": 828,
      "completion_tokens": 74,
      "total_tokens": 902
    }
  }
}
